# procurement

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  render.yaml  render_build.sh  requirements-dev.txt  requirements-llm.txt  requirements.txt
.github/workflows/: ci.yml  evals.yml
apps/api/: deps.py  errors.py  main.py  settings.py  store.py
apps/api/routes/: approvals.py  health.py  orders.py  stream.py  voice.py  webhooks.py
apps/api/static/: index.html
apps/suppliers/: main.py
apps/suppliers/common/: catalog.py  chaos.py  pricing.py
apps/suppliers/edi_pacifictiles/: app.py
apps/suppliers/edi_saudiceramic/: edi.py
apps/suppliers/graphql_buildnorth/: app.py  schema.py
apps/suppliers/mainframe_almona/: app.py
apps/suppliers/mainframe_sydneymills/: fixedwidth.py
apps/suppliers/rest_alrajhi/: app.py  schema.py
apps/web/: index.html  package.json  tsconfig.json
apps/web/src/: main.ts
db/: schema.sql
db/migrations/: README.md
db/seeds/: market_prices.py  materials.py  projects.py  suppliers.py
docs/: agentic-workflows-guide.md  agents.md  architecture.md  suppliers.md
docs/decisions/: 0001-langgraph-over-crewai.md  0002-pgvector-over-chromadb.md  0003-llm-only-at-the-edges.md  0004-adapter-anti-corruption-layer.md
evals/promptfoo/: promptfooconfig.yaml
scripts/: demo_order.py  reset.py  seed_all.py
tests/: conftest.py
tests/e2e/: README.md
tests/integration/: test_orders_api.py  test_supplier_mock.py
tests/resilience/: README.md
tests/unit/: test_models.py  test_pricing_tools.py
(+11 files in other folders)
